<resources>
    <string name="app_name">Delive</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="map">Map</string>
    <string name="menu_text_signIn">Sign in</string>
    <string name="text_Name">Name</string>
    <string name="text_Email">Email</string>
    <string name="text_password">Password</string>
    <string name="text_confirm_password">Confirm password</string>
    <string name="button_confirm">Confirm</string>
    <string name="button_send">Send</string>
    <string name="menu_text_signUp">SIgn Up</string>
    <string name="text_cpf">ID</string>
    <string name="err_name">Name please</string>
    <string name="err_password">Password please</string>
    <string name="err_confirm_password">Passwords does not match</string>
    <string name="err_email">Email please</string>
    <string name="title_activity_front_page">Delive</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="menu_text_logout">Logout</string>
    <string name="your_cellphone_number">Your cellphone number</string>
    <string name="invalid_number">Invalid number</string>
    <string name="confirmation_sms">We\'ve sent you a confirmation SMS</string>
    <string name="confirmation_sms_failure">Confirmation SMS could not be sent</string>
    <string name="successfully_verified">Successfully verified</string>
    <string name="verification_failed">Verification failed</string>
    <string name="need_to_know_you_more">We need to know you more</string>
    <string name="last_name">Last Name</string>
    <string name="document_id">Document ID</string>
    <string name="err_last_name">Last name please</string>
    <string name="mail_not_valid">Mail is not valid.</string>
    <string name="insert_password">Insert your password</string>
    <string name="internal_error">Internal error.</string>
    <string name="wrong_password">Wrong password.</string>
    <string name="logging_in">Logging in...</string>
</resources>
