<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_location_on_black_24dp"
            android:title="@string/map" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="Gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="Slideshow" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_menu_manage"
            android:title="Tools" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_signIn"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_text_signIn" />
            <item
                android:id="@+id/nav_signUp"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_text_signUp" />
        </menu>
    </item>

</menu>
